Setup folder structure and started my first notebook to follow the slides

--- a/Lectures_Slides_Notes/Vectors_Matrices.ipynb
+++ b/Lectures_Slides_Notes/Vectors_Matrices.ipynb
@@ -1,40 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "x <- 2 + 2"
+    "# STAT LEARNING AND DATA MINING 1\n",
+    "## Vectors and Matrices"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "4"
-      ],
-      "text/latex": [
-       "4"
-      ],
-      "text/markdown": [
-       "4"
-      ],
-      "text/plain": [
-       "[1] 4"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "x"
+    "### Definitions (Slides)\n",
+    "$\\mathbf{x}$ is a vector, $ x = \\begin{pmatrix} x_1 \\\\ x_2 \\\\ \\vdots \\\\ \\vdots \\\\ x_n \\end{pmatrix}$ As in the textbook, $x^T = (x_1, x_2, \\cdots, X_n)$ "
    ]
   },
   {
