Made it a little farther on page 11

--- a/An_Introuction_to_Statistical_Learning/Introduction.ipynb
+++ b/An_Introuction_to_Statistical_Learning/Introduction.ipynb
@@ -44,8 +44,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Start end of page 10 start of page 11"
+    "When you transpose a matrix it means that the $ij$ values switch places and become $ji$. So if you had a value that was on the 2nd row and the 3rd column. Then it would move to the 3rd row and the 2nd column.\n",
+    "\n",
+    "You denote that an item has been transposed by putting a capitl \"T\" in the superscript.\n",
+    "\n",
+    "So if we have a row from our matrix of values that we want to show in vector notation we would change it from this:\n",
+    "\n",
+    "$$ \\mathbf{X} = (x_1, x_2, \\cdots, x_p) $$ \n",
+    "\n",
+    "to this:\n",
+    "\n",
+    "$$ \\mathbf{X} = \\begin{pmatrix} x_{1}^T \\\\ x_{2}^T \\\\ \\vdots \\\\ x_{n}^T \\end{pmatrix}$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\mathbf{a}$ = this a represents a vector. A vector of length $n$ will always be denoted in lower case bold.  \n",
+    "$a$ = this a also represents a vector. A feature vector of length $p$ will be denoted in lower case normal font.  \n",
+    "$\\mathbf{A}$ = this represents a matrix. Matrices will be denoted using bold capitals such as $\\mathbf{A}$.  \n",
+    "$A$ = This represents a random variable. Random variables will be denoted using capital normal font, regardless of their dimensions.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Currently on Page 11 (location 25). Where it explains how to represent scalar values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
