Updated some notes and added some files

--- a/An_Introuction_to_Statistical_Learning/Introduction.ipynb
+++ b/An_Introuction_to_Statistical_Learning/Introduction.ipynb
@@ -64,14 +64,56 @@
     "$\\mathbf{a}$ = this a represents a vector. A vector of length $n$ will always be denoted in lower case bold.  \n",
     "$a$ = this a also represents a vector. A feature vector of length $p$ will be denoted in lower case normal font.  \n",
     "$\\mathbf{A}$ = this represents a matrix. Matrices will be denoted using bold capitals such as $\\mathbf{A}$.  \n",
-    "$A$ = This represents a random variable. Random variables will be denoted using capital normal font, regardless of their dimensions.\n"
+    "$A$ = This represents a random variable. Random variables will be denoted using capital normal font, regardless of their dimensions.\n",
+    "\n",
+    "Read Page 11 (location 25) if you have questions about any more notation in the book.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Currently on Page 11 (location 25). Where it explains how to represent scalar values."
+    "$\\mathbb R$ or $\\Bbb R$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrix Multiplication\n",
+    "\n",
+    "Explanation from the book:\n",
+    "Multiplying the matrix $\\mathbf{A}$ and $\\mathbf{B}$, \"is denoted $\\mathbf{AB}$. The $(i, j)th$ element of $\\mathbf{AB}$ is computed by multiplying each element of the $ith$ row of $\\mathbf{A}$ by the corresponding element of the $jth$ column of $\\mathbf{B}$. That is, $(\\mathbf{AB})_{ij} = \\sum_{k=1}^d a_{ik}b_{kj}$. As an example consider\n",
+    "\n",
+    "$$ \n",
+    "\\mathbf{A} = \\begin{pmatrix} 1 & 2 \\\\ 3 & 4 \\\\ \\end{pmatrix} and \\, \n",
+    "\\mathbf{B} = \\begin{pmatrix} 5 & 6 \\\\ 7 & 8 \\\\ \\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "Then\n",
+    "\n",
+    "$$ \n",
+    "\\mathbf{AB} = \\begin{pmatrix} 1 & 2 \\\\ 3 & 4 \\\\ \\end{pmatrix} \\begin{pmatrix} 5 & 6 \\\\ 7 & 8 \\\\\\end{pmatrix}  = \\begin{pmatrix} 1*5+2*7 & 1*6+2*8 \\\\ 3*5+4*7 & 3*6+4*8 \\\\ \\end{pmatrix} \n",
+    "  =\\begin{pmatrix} 19 & 22 \\\\ 43 & 50 \\\\ \\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "Note that this operation produces an $r*s$ matrix. It is only possible to compute $\\mathbf{AB}$ if the number of columns of $\\mathbf{A}$ is the same as the number of rows of $\\mathbf{B}$.\"\n",
+    "\n",
+    "[Link to explanation of Matrix Algebra](https://www.mathsisfun.com/algebra/matrix-multiplying.html)  \n",
+    "[Link to explanation of Dot Product](https://www.mathsisfun.com/algebra/vectors-dot-product.html)\n",
+    "\n",
+    "+ The \"Dot Product\" is where we multiply matching members, then sum up."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "[Website for the book](www.StatLearning.com)"
    ]
   },
   {
