--- a/Lectures_Slides_Notes/Vectors_Matrices.ipynb
+++ b/Lectures_Slides_Notes/Vectors_Matrices.ipynb
@@ -12,8 +12,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Definitions (Slides)\n",
+    "### Definitions (Slide 1)\n",
     "$\\mathbf{x}$ is a vector, $ x = \\begin{pmatrix} x_1 \\\\ x_2 \\\\ \\vdots \\\\ \\vdots \\\\ x_n \\end{pmatrix}$ As in the textbook, $x^T = (x_1, x_2, \\cdots, X_n)$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (Slide 3)\n",
+    "In R the function length returns the number of elements in a vector\n",
+    "+ What we are calling the dimension of the vector\n",
+    "Usually we use the term lenght to mean something quite different\n",
+    "Euclidean length $(x) = \\|x \\| = \\sqrt{\\sum_{i=1}^n x_{i}^2}$ = \"norm\" of $x$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (Slide 5)\n",
+    "#### Dot products of vectors\n",
+    "If $x$ and $y$ are vectors of the same dimension the dot (inner) product of $x$ and $y$ is given by\n",
+    "\n",
+    "$$\n",
+    "x*y = \\sum_{i=1}^n x_i y_i\n",
+    "$$\n",
+    "\n",
+    "If $x*y=0$ the vectors $x$ and $y$ are orthogonal.\n",
+    "\n",
+    "Definition of orthogonal from the internet:\n",
+    "1. of or involving right angles, at right angles\n",
+    "2. (Statistics)(of variates) statistically independent.\n",
+    "3. In geometry, two Euclidean vectors are orthogonal if they are perpendicular, i.e., they form a right angle. Two vectors, x and y, in an inner product space, V, are orthogonal if their inner product is zero.\n"
    ]
   },
   {
