Tested compiling a pdf and added on to the homework.

--- a/Assignments/Assignment1/Homework_1.ipynb
+++ b/Assignments/Assignment1/Homework_1.ipynb
@@ -179,11 +179,236 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Graphically summarize the distributions of the three variables using boxplots, histograms,\n",
-    "and normal quantile plots. Do the summaries for the combined data and for each gender of\n",
-    "turtle.\n",
-    "\n",
-    "\n",
+    "2. Compute the covariance matrices and the correlation matrices for the male and female turtles,\n",
+    "and visually compare them. (Later we will determine how to formally compare covariance\n",
+    "matrices and mean vectors for different groups.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Male Covariance Matrix\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>Length</th><th scope=col>Width</th><th scope=col>Height</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Length</th><td>138.76630</td><td>79.14674 </td><td>37.37500 </td></tr>\n",
+       "\t<tr><th scope=row>Width</th><td> 79.14674</td><td>50.04167 </td><td>21.65399 </td></tr>\n",
+       "\t<tr><th scope=row>Height</th><td> 37.37500</td><td>21.65399 </td><td>11.25906 </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lll}\n",
+       "  & Length & Width & Height\\\\\n",
+       "\\hline\n",
+       "\tLength & 138.76630 & 79.14674  & 37.37500 \\\\\n",
+       "\tWidth &  79.14674 & 50.04167  & 21.65399 \\\\\n",
+       "\tHeight &  37.37500 & 21.65399  & 11.25906 \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| <!--/--> | Length | Width | Height |\n",
+       "|---|---|---|---|\n",
+       "| Length | 138.76630 | 79.14674  | 37.37500  |\n",
+       "| Width |  79.14674 | 50.04167  | 21.65399  |\n",
+       "| Height |  37.37500 | 21.65399  | 11.25906  |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       Length    Width    Height  \n",
+       "Length 138.76630 79.14674 37.37500\n",
+       "Width   79.14674 50.04167 21.65399\n",
+       "Height  37.37500 21.65399 11.25906"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Female Covariance Matrix\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>Length</th><th scope=col>Width</th><th scope=col>Height</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Length</th><td>451.5199 </td><td>270.9746 </td><td>165.95471</td></tr>\n",
+       "\t<tr><th scope=row>Width</th><td>270.9746 </td><td>171.7319 </td><td>101.84420</td></tr>\n",
+       "\t<tr><th scope=row>Height</th><td>165.9547 </td><td>101.8442 </td><td> 64.73732</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lll}\n",
+       "  & Length & Width & Height\\\\\n",
+       "\\hline\n",
+       "\tLength & 451.5199  & 270.9746  & 165.95471\\\\\n",
+       "\tWidth & 270.9746  & 171.7319  & 101.84420\\\\\n",
+       "\tHeight & 165.9547  & 101.8442  &  64.73732\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| <!--/--> | Length | Width | Height |\n",
+       "|---|---|---|---|\n",
+       "| Length | 451.5199  | 270.9746  | 165.95471 |\n",
+       "| Width | 270.9746  | 171.7319  | 101.84420 |\n",
+       "| Height | 165.9547  | 101.8442  |  64.73732 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       Length   Width    Height   \n",
+       "Length 451.5199 270.9746 165.95471\n",
+       "Width  270.9746 171.7319 101.84420\n",
+       "Height 165.9547 101.8442  64.73732"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "males.cov <- cov(males)\n",
+    "females.cov <- cov(females)\n",
+    "print('Male Covariance Matrix')\n",
+    "males.cov\n",
+    "print('Female Covariance Matrix')\n",
+    "females.cov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>Length</th><th scope=col>Width</th><th scope=col>Height</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Length</th><td>451.5199 </td><td>270.9746 </td><td>165.95471</td></tr>\n",
+       "\t<tr><th scope=row>Width</th><td>270.9746 </td><td>171.7319 </td><td>101.84420</td></tr>\n",
+       "\t<tr><th scope=row>Height</th><td>165.9547 </td><td>101.8442 </td><td> 64.73732</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lll}\n",
+       "  & Length & Width & Height\\\\\n",
+       "\\hline\n",
+       "\tLength & 451.5199  & 270.9746  & 165.95471\\\\\n",
+       "\tWidth & 270.9746  & 171.7319  & 101.84420\\\\\n",
+       "\tHeight & 165.9547  & 101.8442  &  64.73732\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| <!--/--> | Length | Width | Height |\n",
+       "|---|---|---|---|\n",
+       "| Length | 451.5199  | 270.9746  | 165.95471 |\n",
+       "| Width | 270.9746  | 171.7319  | 101.84420 |\n",
+       "| Height | 165.9547  | 101.8442  |  64.73732 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       Length   Width    Height   \n",
+       "Length 451.5199 270.9746 165.95471\n",
+       "Width  270.9746 171.7319 101.84420\n",
+       "Height 165.9547 101.8442  64.73732"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>Length</th><th scope=col>Width</th><th scope=col>Height</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Length</th><td>1.0000000</td><td>0.9731162</td><td>0.9706748</td></tr>\n",
+       "\t<tr><th scope=row>Width</th><td>0.9731162</td><td>1.0000000</td><td>0.9659029</td></tr>\n",
+       "\t<tr><th scope=row>Height</th><td>0.9706748</td><td>0.9659029</td><td>1.0000000</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lll}\n",
+       "  & Length & Width & Height\\\\\n",
+       "\\hline\n",
+       "\tLength & 1.0000000 & 0.9731162 & 0.9706748\\\\\n",
+       "\tWidth & 0.9731162 & 1.0000000 & 0.9659029\\\\\n",
+       "\tHeight & 0.9706748 & 0.9659029 & 1.0000000\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| <!--/--> | Length | Width | Height |\n",
+       "|---|---|---|---|\n",
+       "| Length | 1.0000000 | 0.9731162 | 0.9706748 |\n",
+       "| Width | 0.9731162 | 1.0000000 | 0.9659029 |\n",
+       "| Height | 0.9706748 | 0.9659029 | 1.0000000 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       Length    Width     Height   \n",
+       "Length 1.0000000 0.9731162 0.9706748\n",
+       "Width  0.9731162 1.0000000 0.9659029\n",
+       "Height 0.9706748 0.9659029 1.0000000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "males.cor <- cor(males)\n",
+    "females.cor <- cor(females)\n",
+    "females.cov\n",
+    "females.cor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in print(x): object 'x' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in print(x): object 'x' not found\nTraceback:\n",
+      "1. print(x)"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. Compute the covariance matrices and the correlation matrices for the male and female turtles,\n",
     "and visually compare them. (Later we will determine how to formally compare covariance\n",
     "matrices and mean vectors for different groups.)\n",
