--- a/Assignments/Assignment1/Homework_1.ipynb
+++ b/Assignments/Assignment1/Homework_1.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -294,19 +294,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at the covariance matrices for male and female turtles. We can see that they all have an increasing linear relationship. The covariance values for female turtles is much greater than that for male turtles. But generally you will just use covariance to determine whether the variables have a positive linear relationship or a negative linear relationship."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Male Correlation Matrix\"\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
        "<table>\n",
        "<thead><tr><th></th><th scope=col>Length</th><th scope=col>Width</th><th scope=col>Height</th></tr></thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>Length</th><td>451.5199 </td><td>270.9746 </td><td>165.95471</td></tr>\n",
-       "\t<tr><th scope=row>Width</th><td>270.9746 </td><td>171.7319 </td><td>101.84420</td></tr>\n",
-       "\t<tr><th scope=row>Height</th><td>165.9547 </td><td>101.8442 </td><td> 64.73732</td></tr>\n",
+       "\t<tr><th scope=row>Length</th><td>1.0000000</td><td>0.9497846</td><td>0.9455580</td></tr>\n",
+       "\t<tr><th scope=row>Width</th><td>0.9497846</td><td>1.0000000</td><td>0.9122648</td></tr>\n",
+       "\t<tr><th scope=row>Height</th><td>0.9455580</td><td>0.9122648</td><td>1.0000000</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -314,29 +328,36 @@
        "\\begin{tabular}{r|lll}\n",
        "  & Length & Width & Height\\\\\n",
        "\\hline\n",
-       "\tLength & 451.5199  & 270.9746  & 165.95471\\\\\n",
-       "\tWidth & 270.9746  & 171.7319  & 101.84420\\\\\n",
-       "\tHeight & 165.9547  & 101.8442  &  64.73732\\\\\n",
+       "\tLength & 1.0000000 & 0.9497846 & 0.9455580\\\\\n",
+       "\tWidth & 0.9497846 & 1.0000000 & 0.9122648\\\\\n",
+       "\tHeight & 0.9455580 & 0.9122648 & 1.0000000\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
        "| <!--/--> | Length | Width | Height |\n",
        "|---|---|---|---|\n",
-       "| Length | 451.5199  | 270.9746  | 165.95471 |\n",
-       "| Width | 270.9746  | 171.7319  | 101.84420 |\n",
-       "| Height | 165.9547  | 101.8442  |  64.73732 |\n",
+       "| Length | 1.0000000 | 0.9497846 | 0.9455580 |\n",
+       "| Width | 0.9497846 | 1.0000000 | 0.9122648 |\n",
+       "| Height | 0.9455580 | 0.9122648 | 1.0000000 |\n",
        "\n"
       ],
       "text/plain": [
-       "       Length   Width    Height   \n",
-       "Length 451.5199 270.9746 165.95471\n",
-       "Width  270.9746 171.7319 101.84420\n",
-       "Height 165.9547 101.8442  64.73732"
+       "       Length    Width     Height   \n",
+       "Length 1.0000000 0.9497846 0.9455580\n",
+       "Width  0.9497846 1.0000000 0.9122648\n",
+       "Height 0.9455580 0.9122648 1.0000000"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Female Correlation Matrix\"\n"
+     ]
     },
     {
      "data": {
@@ -382,39 +403,127 @@
    "source": [
     "males.cor <- cor(males)\n",
     "females.cor <- cor(females)\n",
-    "females.cov\n",
+    "print('Male Correlation Matrix')\n",
+    "males.cor\n",
+    "print('Female Correlation Matrix')\n",
     "females.cor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in print(x): object 'x' not found\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in print(x): object 'x' not found\nTraceback:\n",
-      "1. print(x)"
-     ]
-    }
-   ],
-   "source": [
-    "print(x)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Compute the covariance matrices and the correlation matrices for the male and female turtles,\n",
-    "and visually compare them. (Later we will determine how to formally compare covariance\n",
-    "matrices and mean vectors for different groups.)\n",
+    "The correlation matrices for females and males show that all of the variables are positively correlated and that they have very strong correlation between them. The correlation values do show greater strength among the female turtles. But the male turtles are still close behind them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. For one of the genders, compute the matrix $T = \\frac{1}{n-1} (\\mathbf{Y}^T \\mathbf{Y} - n \\mathbf{\\bar{y}} \\mathbf{\\bar{y}}^T)$ and compare it with the covariance matrix you previously obtained."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>Length</th><th scope=col>Width</th><th scope=col>Height</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Length</th><td>138.76630</td><td>79.14674 </td><td>37.37500 </td></tr>\n",
+       "\t<tr><th scope=row>Width</th><td> 79.14674</td><td>50.04167 </td><td>21.65399 </td></tr>\n",
+       "\t<tr><th scope=row>Height</th><td> 37.37500</td><td>21.65399 </td><td>11.25906 </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lll}\n",
+       "  & Length & Width & Height\\\\\n",
+       "\\hline\n",
+       "\tLength & 138.76630 & 79.14674  & 37.37500 \\\\\n",
+       "\tWidth &  79.14674 & 50.04167  & 21.65399 \\\\\n",
+       "\tHeight &  37.37500 & 21.65399  & 11.25906 \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| <!--/--> | Length | Width | Height |\n",
+       "|---|---|---|---|\n",
+       "| Length | 138.76630 | 79.14674  | 37.37500  |\n",
+       "| Width |  79.14674 | 50.04167  | 21.65399  |\n",
+       "| Height |  37.37500 | 21.65399  | 11.25906  |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       Length    Width    Height  \n",
+       "Length 138.76630 79.14674 37.37500\n",
+       "Width   79.14674 50.04167 21.65399\n",
+       "Height  37.37500 21.65399 11.25906"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "k <- ncol(males)\n",
+    "n <- nrow(males)\n",
+    "m_males <- as.matrix(males)\n",
     "\n",
-    "3. For one of the genders, compute the matrix $T = \\frac{1}{n-1} (\\mathbf{Y})$\n",
-    "and compare it with thecovariance matrix you previously obtained.\n",
+    "#create means for each column\n",
+    "M_mean <- matrix(data=1, nrow=n) %*% cbind(mean(males$Length),mean(males$Width),mean(males$Height))\n",
+    "\n",
+    "# creates a difference matrix\n",
+    "D <- m_males - M_mean\n",
+    "\n",
+    "# creates the covariance matrix\n",
+    "(n-1)^-1 * (t(D) %*% D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.0434782608695652"
+      ],
+      "text/latex": [
+       "0.0434782608695652"
+      ],
+      "text/markdown": [
+       "0.0434782608695652"
+      ],
+      "text/plain": [
+       "[1] 0.04347826"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "1/(n-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Covariance Matrix Calculation](https://datascienceplus.com/understanding-the-covariance-matrix/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. For one of the genders, compute the matrix $T = \\frac{1}{n-1} (\\mathbf{Y}^T \\mathbf{Y} - n \\mathbf{\\bar{y}} \\mathbf{\\bar{y}}^T)$ and compare it with thecovariance matrix you previously obtained.\n",
     "\n",
     "4. For one of the covariance matrices, compute the eigenvalues and eigenvectors of the inverse\n",
     "of the covariance matrix. What is the relationship between the eigenvalues and eigenvectors\n",
