--- a/Definitions_and_Functions.ipynb
+++ b/Definitions_and_Functions.ipynb
@@ -11,9 +11,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b> Covariance:</b> \n",
-    "* [Definition](http://mathworld.wolfram.com/Covariance.html) - Covariance provides a measure of the strength of the correlation between two or more sets of random variates.\n",
-    "* Lecture Slides - Variance-Covariance Matrix, S - Measures variability in the variables"
+    "## Correlation:\n",
+    "* Provides the direction and strength of a relationship.\n",
+    "* the correlation result will always be between -1 and +1 and its scale is independent of the scale of the variables themselves.\n",
+    "* Correlation is standardized (think z-score).\n",
+    "* Correlation is only applicable to LINEAR relationships. There are many other tyes of relationships that can exist between two variables.\n",
+    "* Correlation is NOT Causation.\n",
+    "* Correlation strength does not necessarily mena the correlation is statistically significant; related to sample size.\n",
+    "* Interpretation: Positive relationship is near +1, negative relationship is near -1, no correlation it will be near 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Covariance:\n",
+    "* [Definition](http://mathworld.wolfram.com/Covariance.html) - Covariance provides a measure of the strength of the correlation between two or more sets of random variates. Other sources say it will just so you the direction it will not show you the strength.\n",
+    "* Lecture Slides - Variance-Covariance Matrix, S - Measures variability in the variables\n",
+    "* Covariance is one of a family of statistical measures used to analyze the linear relationship between two variables. It is a descriptive measure of the linear association between two variables.\n",
+    "* Covariance result has no upper or lower bound and its size is dependent on the scale of the variables.\n",
+    "* Covariance is not standardized.\n",
+    "\n",
+    "## Covariance Matrix:\n",
+    "* [Covariance Matrix](https://www.youtube.com/watch?v=locZabK4Als)\n",
+    "* Interpretation: A positive value indicates a direct or increasing linear relationship, A negative value indicates a decreasing relationship. Covariance at or around zero indicates that there is not a linear relationship between the two. Covariance does not tell us anything about the strength of the relationship just the direction of the relationship. To find the strength of the relationship you will want to look at correlation.\n",
+    "* The diagonal of a covariance matrix provides the variance of each individual variable; covariance with itself.\n",
+    "* The off-diagonal entries in the matrix provide the covariance between each variable pair.\n",
+    "* Remember that the standard deviation is simply the square root of the variance so that can be calculated as well.\n",
+    "* [Explanation](https://datascienceplus.com/understanding-the-covariance-matrix/) of the covariance matrix"
    ]
   },
   {
@@ -24,11 +49,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* [Simple Statistics](https://www.youtube.com/watch?v=xGbpuFNR1ME&list=PLIeGtxpvyG-JMH5fGDWhtniyET88Mexcw&index=5)\n",
+    "* [Symbols, Meaning, Latex](https://en.wikipedia.org/wiki/List_of_mathematical_symbols)"
+   ]
   },
   {
    "cell_type": "code",
