--- a/Lectures_Slides_Notes/Turtles.ipynb
+++ b/Lectures_Slides_Notes/Turtles.ipynb
@@ -2,9 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'hide_input'"
+      ],
+      "text/latex": [
+       "'hide\\_input'"
+      ],
+      "text/markdown": [
+       "'hide_input'"
+      ],
+      "text/plain": [
+       "[1] \"hide_input\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\"hide_input\"\n",
     "turtles <- read.csv(\"../Data/turtles.csv\")"
@@ -12,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -445,11 +464,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>Length</th><th scope=col>Width</th><th scope=col>Height</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Length</th><td>138.76630</td><td>79.14674 </td><td>37.37500 </td></tr>\n",
+       "\t<tr><th scope=row>Width</th><td> 79.14674</td><td>50.04167 </td><td>21.65399 </td></tr>\n",
+       "\t<tr><th scope=row>Height</th><td> 37.37500</td><td>21.65399 </td><td>11.25906 </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lll}\n",
+       "  & Length & Width & Height\\\\\n",
+       "\\hline\n",
+       "\tLength & 138.76630 & 79.14674  & 37.37500 \\\\\n",
+       "\tWidth &  79.14674 & 50.04167  & 21.65399 \\\\\n",
+       "\tHeight &  37.37500 & 21.65399  & 11.25906 \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| <!--/--> | Length | Width | Height |\n",
+       "|---|---|---|---|\n",
+       "| Length | 138.76630 | 79.14674  | 37.37500  |\n",
+       "| Width |  79.14674 | 50.04167  | 21.65399  |\n",
+       "| Height |  37.37500 | 21.65399  | 11.25906  |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       Length    Width    Height  \n",
+       "Length 138.76630 79.14674 37.37500\n",
+       "Width   79.14674 50.04167 21.65399\n",
+       "Height  37.37500 21.65399 11.25906"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "males.cov=cov(males) #variance covariance matrix"
+    "males.cov=cov(males) #variance covariance matrix\n",
+    "males.cov"
    ]
   },
   {
